Update StringGeneratorsTest.java